# themectl

./: Cargo.toml  IMPLEMENT.md  README.md
apps/themectl-gui/: DESIGN.md  index.html  package-lock.json  package.json
apps/themectl-gui/src/: App.css  App.tsx  index.css  main.tsx
apps/themectl-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/themectl-gui/src-tauri/capabilities/: default.json
apps/themectl-gui/src-tauri/src/: commands.rs  dto.rs  lib.rs  main.rs
apps/themectl-gui/src/components/layout/: AppShell.tsx  PageHeader.tsx
apps/themectl-gui/src/components/themes/: PreviewModal.tsx
apps/themectl-gui/src/components/ui/: Button.tsx  CardSectionHeader.tsx  SearchInput.tsx
apps/themectl-gui/src/hooks/: useBackups.ts  useDoctor.ts  useSettings.ts  useSources.ts  useThemes.ts  useTranslation.ts
apps/themectl-gui/src/i18n/: translations.ts
apps/themectl-gui/src/pages/: Backups.tsx  CreateTheme.tsx  Dashboard.tsx  Doctor.tsx  Installed.tsx  Repositories.tsx  Settings.tsx  ThemeDetails.tsx  Themes.tsx
apps/themectl-gui/src/services/: api.ts
apps/themectl-gui/src/stores/: themeStore.ts
apps/themectl-gui/src/types/: index.ts
crates/themectl-backup/: Cargo.toml
crates/themectl-backup/src/: backup.rs  lib.rs  restore.rs  snapshot.rs
crates/themectl-cli/: Cargo.toml
crates/themectl-cli/src/: main.rs
crates/themectl-cli/tests/: cli_apply.rs  cli_install.rs  cli_rollback.rs
crates/themectl-core/: Cargo.toml
crates/themectl-core/src/: lib.rs
crates/themectl-kde/: Cargo.toml
crates/themectl-kde/src/: detector.rs  kde.rs  lib.rs
crates/themectl-repository/: Cargo.toml
crates/themectl-repository/src/: lib.rs  registry.rs  source.rs
crates/themectl-security/: Cargo.toml
crates/themectl-security/src/: signature.rs
crates/themectl-spec/: Cargo.toml
crates/themectl-spec/src/: lib.rs  lockfile.rs  manifest.rs  validator.rs
crates/themectl-theme/: Cargo.toml
crates/themectl-theme/src/: package.rs
crates/themectl-utils/: Cargo.toml
crates/themectl-utils/src/: cmd.rs  compat.rs  error.rs  lib.rs
src/: cli.rs  error.rs  lib.rs  main.rs
src/apply/: detector.rs  kde.rs  mod.rs
src/backup/: mod.rs  restore.rs  snapshot.rs
src/repo/: mod.rs  registry.rs  source.rs
src/theme/: lockfile.rs  manifest.rs  mod.rs  package.rs  signature.rs  validator.rs
src/util/: compat.rs  fs.rs  mod.rs
store/: index.json
store/scripts/: pack-theme.sh  serve.sh
store/themes/: catppuccin-mocha.theme  nexus-desktop.theme
store/themes/catppuccin-mocha/: theme.yaml
store/themes/nexus-desktop/: theme.yaml
store/themes/nexus-desktop/plasma/: metadata.json
store/themes/nexus-desktop/plasma/widgets/: line.svgz  radiobutton.svgz
tests/: cli_apply.rs  cli_install.rs
tests/fixtures/minimal-theme/: theme.yaml
