[package]
name = "themectl"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialização
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# HTTP (para download de temas)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Arquivos compactados
flate2 = "1"
tar = "0.4"

# Erros
anyhow = "1"
thiserror = "1"

# Cores no terminal
colored = "2"

# Paths
dirs = "5"

# Data/hora para backups
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
