[workspace]
resolver = "2"

members = [
    "crates/themectl-utils",
    "crates/themectl-spec",
    "crates/themectl-security",
    "crates/themectl-theme",
    "crates/themectl-kde",
    "crates/themectl-backup",
    "crates/themectl-repository",
    "crates/themectl-core",
    "crates/themectl-cli",
]
