[package]
name = "themectl-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
themectl-utils = { path = "../themectl-utils" }
themectl-spec = { path = "../themectl-spec" }

[dev-dependencies]
tempfile = "3"
