[package]
name = "themectl-security"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1", default-features = false, features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
themectl-utils = { path = "../themectl-utils" }
themectl-spec = { path = "../themectl-spec" }


[dev-dependencies]
tempfile = "3"
rand = "0.8"
