[package]
name = "themectl-theme"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1"
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
themectl-utils = { path = "../themectl-utils" }
themectl-spec = { path = "../themectl-spec" }

[dev-dependencies]
tempfile = "3"
